--- a/src/debian/control
+++ b/src/debian/control
@@ -12,6 +12,11 @@ Depends: blubuntu-paintings,
          ${misc:Depends}
 Description: Blubuntu (metapackage) - turns Ubuntu into blue!
 
+Package: blubuntu-plymouth
+Architecture: all
+Depends: ${misc:Depends}
+Description: Blubuntu Plymouth - grub / start & shutdown.
+
 Package: blubuntu-paintings
 Architecture: all
 Depends: ${misc:Depends}
